--- a/index.html
+++ b/index.html
@@ -6,10 +6,86 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link rel="stylesheet" href="./assets/css/common.css">
 </head>
 
 <body>
+  <div class="wrapper">
+    <header class="main_menu">
+      <div class="inner_container">
+        <div class="menu_bar">
+          <ul class="menu_gnb">
+            <li><a href="javascript:(0)">입학안내</a></li>
+            <li><a href="javascript:(0)">시설안내</a></li>
+            <li><a href="javascript:(0)">특성화프로그램</a></li>
+            <li><a href="javascript:(0)">원생활</a></li>
+            <li><a href="javascript:(0)">오시는길</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
 
+    <section class="main_visual_section">
+      <div class="visual_img_box">
+        <img src="./assets/images/visual_img.png" alt="visual_img">
+      </div>
+    </section>
+
+    <section class="kindergarden_enterance">
+      <div class="inner_container">
+        <div class="text_posiiton">
+          <div class="build_img_box">
+            <img src="./assets/images/building_icon.png" alt="icon">
+          </div>
+          <div class="icon_txt">
+            <p>입학안내</p>
+          </div>
+          <h2 class="sec_title">아이와 함께하는 행복한 시간, 행복유치원</h2>
+          <p class="sec_desc">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 <br />넓은 야외마당과 편안히 쉴 수 있는 실내 놀이터가 준비되어 있습니다.</p>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="./assets/images/enter01.png" alt="enterance_img1">
+            </div>
+            <div class="col-md-4">
+              <img src="./assets/images/enter02.png" alt="enterance_img2">
+            </div>
+            <div class="col-md-4">
+              <img src="./assets/images/enter03.png" alt="enterance_img3">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="kindergarden_facility">
+      <div class="inner_container">
+        <div class="text_posiiton">
+          <div class="build_img_box">
+            <img src="./assets/images/building_icon.png" alt="icon">
+          </div>
+          <div class="icon_txt">
+            <p>시설안내</p>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="./assets/images/facility_img.png" alt="facility_img">
+            </div>
+            <div class="col-md-6">
+              <h2 class="sec_title">아이와 함께하는 행복한 시간, 행복유치원</h2>
+              <p class="sec_desc">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 <br />넓은 야외마당과 편안히 쉴 수 있는 실내 놀이터가 준비되어 있습니다.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </div>
 </body>
 
 </html>
