sub common css 수정

--- a/sub/introduction.html
+++ b/sub/introduction.html
@@ -20,7 +20,7 @@
     </div>
     <!-- 여기부터 부트스트랩 -->
   <div class="intro">
-    <div class="container-fluid inner_container_sub">
+    <div class="container-fluid inner_container">
       <div class="row">
         <div class="col-md-4 intro_text_wrap">
           <div class="intro_wrap">
