--- a/sub/creative.html
+++ b/sub/creative.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/sub.css">
   <link rel="stylesheet" href="./assets/css/sub_common.css">
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title>Document</title>
-</head>
+</head> 
 <body>
   <div class="wrap">
     <div class="creative_main_banner">
@@ -17,11 +19,11 @@
     <div class="creative_btn">인사말</div>
     <!-- 여기부터 부트스트랩 -->
     <div class="creative">
-      <div class="container-fluid inner_container_sub">
-        <div class="row">
+      <div class="container-fluid inner_container">
+        <div class="row"> 
           <div class="col-md-6 creative_text_wrap">
             <div class="creative_txt">
-              <h1 class="sec_tit">Creative & Growth</h1>
+              <h2 class="sec_tit">Creative & Growth</h2>
               <p class="sec_sub_tit">저희 키즈 아카데미는 아이들이 창의적인 인재로 성장할 수 있도록 즐거움과 학습 모두를 지향하는 교육을 위해 항상 노력하고 있습니다.<br /><br />
 
               이미 많은 아이들이 키즈 아카데미에서 수많은 꿈을 키우고 있습니다.<br />
@@ -31,7 +33,7 @@
             </div>
           </div> 
           <div class="col-md-6 col-sm-12 creative_img_wrap">
-            <img src="./assets/" alt="">
+            <img src="./assets/images/creative.png" alt="">
           </div>
         </div>
       </div>
