--- a/sub/introduction.html
+++ b/sub/introduction.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="./assets/css/sub_common.css">
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <title>어린이집소개</title>
+  <title>메인</title>
 </head>
-<body>
+<body>            
   <div class="wrap">
     <div class="main_banner">
       <div class="main_text_box">
