--- a/sub/creative.html
+++ b/sub/creative.html
@@ -13,8 +13,10 @@
 <body>
   <div class="wrap">
     <div class="creative_main_banner">
-      <h1 class="main_tit cre_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
-      <p class="main_sub_tit cre_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+      <div class="cre_main_text_box">
+        <h1 class="main_tit cre_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
+        <p class="main_sub_tit cre_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+      </div>
     </div>
     <div class="creative_btn">인사말</div>
     <!-- 여기부터 부트스트랩 -->
