--- a/sub/creative.html
+++ b/sub/creative.html
@@ -14,11 +14,11 @@
   <div class="wrap">
     <div class="creative_main_banner">
       <div class="cre_main_text_box">
-        <h1 class="main_tit cre_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
+        <h1 class="s_main_tit cre_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
         <p class="main_sub_tit cre_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
       </div>
     </div>
-    <div class="creative_btn">인사말</div>
+    <div class="creative_btn"><p class="hi">인사말</p></div>
     <!-- 여기부터 부트스트랩 -->
     <div class="creative">
       <div class="container-fluid inner_container">
@@ -26,7 +26,7 @@
           <div class="col-md-6 creative_text_wrap">
             <div class="creative_txt">
               <h2 class="sec_tit">Creative & Growth</h2>
-              <p class="sec_sub_tit">저희 키즈 아카데미는 아이들이 창의적인 인재로 성장할 수 있도록 즐거움과 학습 모두를 지향하는 교육을 위해 항상 노력하고 있습니다.<br /><br />
+              <p class="sec_sub_tit Creative_s_txt">저희 키즈 아카데미는 아이들이 창의적인 인재로 성장할 수 있도록 즐거움과 학습 모두를 지향하는 교육을 위해 항상 노력하고 있습니다.<br /><br />
 
               이미 많은 아이들이 키즈 아카데미에서 수많은 꿈을 키우고 있습니다.<br />
               다양한 경험들을 통해 아이의 한층 더 건강한 신체와 정서적인 발달을 키워주세요.<br />
