--- a/sub/creative.html
+++ b/sub/creative.html
@@ -35,7 +35,7 @@
             </div>
           </div> 
           <div class="col-md-6 col-sm-12 creative_img_wrap">
-            <img src="./assets/images/creative.png" alt="">
+            <img src="./assets/images/creative.png" alt="" class="growth">
           </div>
         </div>
       </div>
