반응형 작업 시작

--- a/onepage/index.html
+++ b/onepage/index.html
@@ -24,6 +24,30 @@
             <li><a href="javascript:(0)">원생활</a></li>
             <li><a href="javascript:(0)">오시는길</a></li>
           </ul>
+          <div class="tab_menu">
+            <div class="logo_img">
+              <p>어린이집 로고</p>
+            </div>
+            <div class="ghost">
+              <div class="ghost_bar">
+                <input type="checkbox" id="ghost_menu">
+                <label for="ghost_menu">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="ghost_list">
+            <ul>
+              <li><a href="javascript:(0)">입학안내</a></li>
+              <li><a href="javascript:(0)">시설안내</a></li>
+              <li><a href="javascript:(0)">특성화프로그램</a></li>
+              <li><a href="javascript:(0)">원생활</a></li>
+              <li><a href="javascript:(0)">오시는길</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -121,14 +145,14 @@
         </div>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6 1st_col">
+            <div class="col-md-6 col-sm-12 first_col">
               <figure>
                 <picture>
                   <img src="./assets/images/facility_img.png" alt="facility_img">
                 </picture>
               </figure>
             </div>
-            <div class="col-md-6 sec-col">
+            <div class="col-md-6 col-sm-12 sec-col">
               <div class="text-position">
                 <h2 class="sec_title">아이와 함께하는 행복한 시간, 행복유치원</h2>
                 <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 <br />넓은 야외마당과 편안히 쉴 수 있는 실내 놀이터가 준비되어 있습니다.</p>
@@ -158,19 +182,19 @@
         <div class="inner_container">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000">
+              <div class="col-md-3 col-sm-12" data-aos="fade-up" data-aos-duration="1000">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
                 <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
-              <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+              <div class="col-md-3 col-sm-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
                 <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
-              <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000">
+              <div class="col-md-3 col-sm-12" data-aos="fade-up" data-aos-duration="1000">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
                 <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
-              <div class="col-md-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+              <div class="col-md-3 col-sm-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
                 <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
@@ -191,12 +215,12 @@
             </figure>
           </div>
           <div class="icon_txt">
-            <p class="mt-1">원생활</p>
+            <p>원생활</p>
           </div>
         </div>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
               <figure>
                 <picture>
                   <img src="./assets/images/life_img1.png" alt="life_img1">
@@ -209,7 +233,7 @@
                   우리 아이들의 놀이를 책임집니다!</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
               <figure>
                 <picture>
                   <img src="./assets/images/life_img2.png" alt="life_img2">
@@ -222,7 +246,7 @@
                   우리 아이들의 놀이를 책임집니다!</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
               <figure>
                 <picture>
                   <img src="./assets/images/life_img3.png" alt="life_img3">
@@ -256,14 +280,14 @@
         </div>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6 ad_1st_col">
+            <div class="col-md-6 col-sm-12 ad_first_col">
               <div class="text-position">
                 <h2 class="sec_title">아이와 함께하는 행복한 시간, 행복유치원</h2>
                 <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록<br />
                   넓은 야외마당과 편안히 쉴 수 있는 실내 놀이터가 준비되어 있습니다.</p>
               </div>
             </div>
-            <div class="col-md-6 ad_2nd_col">
+            <div class="col-md-6 col-sm-12 ad_second_col">
               <div id="daumRoughmapContainer1668666442340" class="root_daum_roughmap root_daum_roughmap_landing"></div>
               <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
               <script charset="UTF-8">
