--- a/center.html
+++ b/center.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/sub.css">
-  <link rel="stylesheet" href="./assets/css/sub_common.css">
+  <link rel="stylesheet" href="./sub/assets/css/sub.css">
+  <link rel="stylesheet" href="./sub/assets/css/sub_common.css">
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title>아카데미 센터</title>
@@ -19,12 +19,36 @@
       </div>
     </div>
     <div class="center_btn"><p class="guide">시설안내</p></div>
-    <div class="academy_text_box">
-      <h1 class="sec_tit">아카데미 센터</h1>
-      <p class="academy_tit">키즈 아카데미의 교육환경을 갤러리에서 확인하세요<br />
-      사진을 클릭하시면 크게 보실 수 있습니다.</p>
-    </div>
     <!-- 여기부터 부트스트랩 -->
+    <div class="center">
+      <div class="container-fluid inner_container">
+        <div class="academy_text_box">
+          <h1 class="sec_tit">아카데미 센터</h1>
+          <p class="desc academy_txt">키즈 아카데미의 교육환경을 갤러리에서 확인하세요<br />
+          사진을 클릭하시면 크게 보실 수 있습니다.</p>
+        </div>
+        <div class="row">
+          <div class="col-xl-4 col-md-6 col-sm-12 academy_list mr-10">
+            <img src="./sub/assets/images/academy1.png" alt="">
+          </div>
+          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
+            <img src="./sub/assets/images/academy2.png" alt="">
+          </div>
+          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
+            <img src="./sub/assets/images/academy3.png" alt="">
+          </div>
+          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
+            <img src="./sub/assets/images/academy4.png" alt="">
+          </div>
+          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
+            <img src="./sub/assets/images/academy5.png" alt="">
+          </div>
+          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
+            <img src="./sub/assets/images/academy6.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
