--- a/sub/sub_ver2/index.html
+++ b/sub/sub_ver2/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/sub.css">
-  <link rel="stylesheet" href="./assets/css/sub_common.css">
+  <link rel="stylesheet" href="../assets/css/sub.css">
+  <link rel="stylesheet" href="../assets/css/sub_common.css">
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title>메인페이지</title>
@@ -34,12 +34,12 @@
         
         <div class="col-md-8 col-sm-12 intro_list">
           <div class="row guide1">
-            <div class="col-md-6 list"><img src="./assets/images/list1.png" alt=""><p class="img_txt">인사말</p></div>
-            <div class="col-md-6 list"><img src="./assets/images/list2.png" alt=""><p class="img_txt">시설안내</p></div>
+            <div class="col-md-6 list"><img src="../assets/images/list1.png" alt=""><p class="img_txt">인사말</p></div>
+            <div class="col-md-6 list"><img src="../assets/images/list2.png" alt=""><p class="img_txt">시설안내</p></div>
           </div>  
         <div class="row guide2">
-          <div class="col-md-6 list"><img src="./assets/images/list3.png" alt=""><p class="img_txt">입학안내</p></div>
-            <div class="col-md-6 list"><img src="./assets/images/list4.png" alt=""><p class="img_txt">인사말</p></div>
+          <div class="col-md-6 list"><img src="../assets/images/list3.png" alt=""><p class="img_txt">입학안내</p></div>
+            <div class="col-md-6 list"><img src="../assets/images/list4.png" alt=""><p class="img_txt">인사말</p></div>
           </div>
         </div>
       </div>
