--- a/sub/creative.html
+++ b/sub/creative.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/sub.css">
   <link rel="stylesheet" href="./assets/css/sub_common.css">
+  <link rel="stylesheet" href="./assets/css/sub.css">
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title>인삿말</title>
@@ -23,10 +23,10 @@
     <div class="creative">
       <div class="container-fluid inner_container">
         <div class="row"> 
-          <div class="col-md-6 creative_text_wrap">
+          <div class="col-md-6 col-sm-12 creative_text_wrap">
             <div class="creative_txt">
               <h2 class="sec_tit">Creative & Growth</h2>
-              <p class="desc Creative_s_txt">저희 키즈 아카데미는 아이들이 창의적인 인재로 성장할 수 있도록 즐거움과 학습 모두를 지향하는 교육을 위해 항상 노력하고 있습니다.<br /><br />
+              <p class="desc creative_s_txt">저희 키즈 아카데미는 아이들이 창의적인 인재로 성장할 수 있도록 즐거움과 학습 모두를 지향하는 교육을 위해 항상 노력하고 있습니다.<br /><br />
 
               이미 많은 아이들이 키즈 아카데미에서 수많은 꿈을 키우고 있습니다.<br />
               다양한 경험들을 통해 아이의 한층 더 건강한 신체와 정서적인 발달을 키워주세요.<br />
