헤더, 스크립트 업데이트

--- a/onepage/index.html
+++ b/onepage/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="./assets/css/common.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="./assets/js/jquery-3.6.1.min.js"></script>
+  <script src="./assets/js/kindergarden.js"></script>
 </head>
 <body>
   <div class="wrapper">
@@ -39,20 +41,20 @@
               </div>
             </div>
           </div>
-          <div class="ghost_list">
-            <ul>
-              <li><a href="javascript:(0)">입학안내</a></li>
-              <li><a href="javascript:(0)">시설안내</a></li>
-              <li><a href="javascript:(0)">특성화프로그램</a></li>
-              <li><a href="javascript:(0)">원생활</a></li>
-              <li><a href="javascript:(0)">오시는길</a></li>
-            </ul>
-          </div>
+        </div>
+        <div class="ghost_list">
+          <ul>
+            <li><a href="javascript:(0)">입학안내</a></li>
+            <li><a href="javascript:(0)">시설안내</a></li>
+            <li><a href="javascript:(0)">특성화프로그램</a></li>
+            <li><a href="javascript:(0)">원생활</a></li>
+            <li><a href="javascript:(0)">오시는길</a></li>
+          </ul>
         </div>
       </div>
     </header>
 
-    <section class="main_visual__section section_gap">
+    <section class="main_visual__section">
       <div class="main_txt_position">
         <div class="inner_container">
           <h1 class="main_title" data-aos="fade-right" data-aos-duration="1000">사랑하는 아이를 기르는 일,<br />행복유치원이 함께 하겠습니다.</h1>
@@ -85,7 +87,7 @@
         </div>
         <div class="container-fluid kindergarden__content">
           <di class="row">
-            <div class="col-md-4 col-sm-12" data-aos="fade-up" data-aos-duration="1000">
+            <div class="col-lg-4 col-sm-12" data-aos="fade-up" data-aos-duration="1000">
               <figure>
                 <picture>
                   <img src="./assets/images/enter01.png" alt="enterance_img1">
@@ -182,19 +184,19 @@
         <div class="inner_container">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-3 col-sm-12" data-aos="fade-up" data-aos-duration="1000">
+              <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
                 <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
-              <div class="col-md-3 col-sm-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+              <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
                 <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
-              <div class="col-md-3 col-sm-12" data-aos="fade-up" data-aos-duration="1000">
+              <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
                 <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
-              <div class="col-md-3 col-sm-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+              <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
                 <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
@@ -314,6 +316,7 @@
   <script>
     AOS.init();
   </script>
+
 </body>
 
 </html>
