어린이집 서브페이지 작업

--- a/sub/creative.html
+++ b/sub/creative.html
@@ -40,6 +40,11 @@
         </div>
       </div>
     </div> 
+    <footer>
+        <div class="inner_container">
+          <p>Copyright 2022 kindergarden Co.All rights reserved.</p>
+        </div>
+      </footer>
   </div>
 </body>
 </html>
