--- a/sub/entrance.html
+++ b/sub/entrance.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="../onepage/assets/css/common.css" />
     <link rel="stylesheet" href="../onepage/assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/sub_common.css" />
-    <link rel="stylesheet" href="./assets/css/entrance.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/sub.css" />
+    <title>입학안내</title>
   </head>
   <body>
     <div class="wrapper">
@@ -34,53 +34,40 @@
       </header>
 
       <div class="entr_wrap">
-        <div class="entr_main">
-          <div class="entr_img">
-            <img
-              src="./assets/images/entrance_main.png"
-              alt="입학안내 메인이미지"
-            />
-          </div>
-          <div class="entr_main_text">
-            <h1 class="s_main_tit">
-              어린이집, <br />행복유치원에서 시작하세요.
-            </h1>
-            <p class="main_sub_tit">
-              연령에 맞는 놀이와 학습 컨텐츠로 <br />아이에게 무한한 가능성을
-              열어주세요!
-            </p>
+        <div class="entr_main_banner">
+          <div class="entr_main_text_box">
+            <h1 class="s_main_tit entr_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
+            <p class="main_sub_tit entr_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
           </div>
         </div>
-        <div class="entr_contents">
-          <div class="cont_tag">
-            <span>입학안내</span>
-          </div>
-          <div class="entr_info">
-            <div class="info_text">
-              <div class="info_tit">
-                <h2 class="sec_tit">입학안내</h2>
-                <p class="desc">
-                  저희 킨더가든은 아이들의 창의적인 생각과 <br />올바른 성장의
-                  밑거름으로 <br />창의 인재육성을 돕고 있습니다.
-                </p>
-              </div>
+        <div class="entr_btn"><p class="entr">입학안내</p></div>
+          <div class="inner_container">
+            <div class="entr_text_box">
+              <h1 class="sec_tit">입학안내</h1>
+              <p class="desc s_entr_txt">저희 킨더가든은 아이들의 창의적인 생각과<br />
+              올바른 성장의 밑거름으로<br />
+              창의 인재육성을 돕고 있습니다.</p>
             </div>
-            <div class="info_notice container-fluid">
+          </div>
+        <!--  -->
+        <div class="entr_contents"> 
+          <div class="entr_info">
+            <div class="container-fluid inner_container">
               <div class="notice_container">
                 <div class="row">
                   <div class="col-md-4">
-                    <p class="notice_txt">모집기간</p>
-                    <p class="desc">2000년 0월 0일 - 2000년 0월 0일</p>
+                    <p class="notice_txt" style="background-color: #E04B37;">모집기간</p>
+                    <p class="desc day">2000년 0월 0일 - 2000년 0월 0일</p>
                   </div>
                   <div class="col-md-4">
-                    <p class="notice_txt">지원자격</p>
-                    <p class="desc">
+                    <p class="notice_txt" style="background-color: #EFC12D;">지원자격</p>
+                    <p class="desc day">
                       만3세~만5세 유아 <br />(2000.01.01 ~ 2000.12.31)
                     </p>
                   </div>
                   <div class="col-md-4">
-                    <p class="notice_txt">모집인원</p>
-                    <p class="desc">
+                    <p class="notice_txt" style="background-color: #37B7E0;">모집인원</p>
+                    <p class="desc day">
                       재원생과 재원생 동생을 우선 모집 후 <br />남은 인원을
                       선발합니다.
                     </p>
