--- a/sub/center.html
+++ b/sub/center.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./sub/assets/css/sub.css">
-  <link rel="stylesheet" href="./sub/assets/css/sub_common.css">
+  <link rel="stylesheet" href="./assets/css/sub.css">
+  <link rel="stylesheet" href="./assets/css/sub_common.css">
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title>아카데미 센터</title>
@@ -29,26 +29,31 @@
         </div>
         <div class="row">
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list mr-10">
-            <img src="./sub/assets/images/academy1.png" alt="">
+            <img src="./assets/images/academy1.png" alt="">
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./sub/assets/images/academy2.png" alt="">
+            <img src="./assets/images/academy2.png" alt="">
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./sub/assets/images/academy3.png" alt="">
+            <img src="./assets/images/academy3.png" alt="">
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./sub/assets/images/academy4.png" alt="">
+            <img src="./assets/images/academy4.png" alt="">
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./sub/assets/images/academy5.png" alt="">
+            <img src="./assets/images/academy5.png" alt="">
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./sub/assets/images/academy6.png" alt="">
+            <img src="./assets/images/academy6.png" alt="">
           </div>
         </div>
       </div>
     </div>
+    <footer>
+        <div class="inner_container">
+          <p>Copyright 2022 kindergarden Co.All rights reserved.</p>
+        </div>
+      </footer>
   </div>
 </body>
 </html>
