--- a/sub/sub_ver2/index.html
+++ b/sub/sub_ver2/index.html
@@ -44,6 +44,11 @@
         </div>
       </div>
       </div>
+      <footer>
+        <div class="inner_container">
+          <p>Copyright 2022 kindergarden Co.All rights reserved.</p>
+        </div>
+      </footer>
   </div>
 </body>
 </html>
