--- a/sub/sub_ver2/creative.html
+++ b/sub/sub_ver2/creative.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- CSS only -->
+   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/css/sub_common.css">
-  <link rel="stylesheet" href="./assets/css/sub.css">
+  <link rel="stylesheet" href="../assets/css/sub_common.css">
+  <link rel="stylesheet" href="../assets/css/sub.css">
   <script src="./assets/js/jquery-3.6.1.min.js"></script>
   <script src="./assets/js/sub.js"></script>
-  <title>아카데미 센터</title>
-</head>
+  <title>인삿말</title>
+</head> 
 <body>
   <div class="wrap">
     <header class="main_menu">
@@ -21,7 +21,7 @@
             <li><a href="./index.html">HOME</a></li>
             <li><a href="./creative.html">인사말</a></li>
             <li><a href="./center.html">시설안내</a></li>
-            <li><a href="./entrance.html">입학안내</a></li>
+            <li><a href="./live.html">원생활</a></li>
             <li><a href="./guide.html">오시는길</a></li>
           </ul>
           <div class="tab_menu">
@@ -45,49 +45,40 @@
             <li><a href="./index.html">HOME</a></li>
             <li><a href="./creative.html">인사말</a></li>
             <li><a href="./center.html">시설안내</a></li>
-            <li><a href="./entrance.html">입학안내</a></li>
+            <li><a href="./live.html">원생활</a></li>
             <li><a href="./guide.html">오시는길</a></li>
           </ul>
         </div>
       </div>
     </header>
-    <div class="center_main_banner">
-      <div class="center_main_text_box">
-        <h1 class="s_main_tit center_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
-        <p class="main_sub_tit center_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+    <div class="creative_main_banner">
+      <div class="cre_main_text_box">
+        <h1 class="s_main_tit cre_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
+        <p class="main_sub_tit cre_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
       </div>
     </div>
-    <div class="center_btn"><p class="guide">시설안내</p></div>
+    <div class="creative_btn"><p class="hi">인사말</p></div>
     <!-- 여기부터 부트스트랩 -->
-    <div class="center">
+    <div class="creative">
       <div class="container-fluid inner_container">
-        <div class="academy_text_box">
-          <h1 class="sec_tit">아카데미 센터</h1>
-          <p class="desc academy_txt">키즈 아카데미의 교육환경을 갤러리에서 확인하세요<br />
-          사진을 클릭하시면 크게 보실 수 있습니다.</p>
-        </div>
-        <div class="row">
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list mr-10">
-            <img src="./assets/images/academy1.png" alt="">
-          </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy2.png" alt="">
-          </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy3.png" alt="">
-          </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy4.png" alt="">
-          </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy5.png" alt="">
-          </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy6.png" alt="">
+        <div class="row"> 
+          <div class="col-md-6 col-sm-12 creative_text_wrap">
+            <div class="creative_txt">
+              <h2 class="sec_tit">Creative & Growth</h2>
+              <p class="desc creative_s_txt">저희 키즈 아카데미는 아이들이 창의적인 인재로 성장할 수 있도록 즐거움과 학습 모두를 지향하는 교육을 위해 항상 노력하고 있습니다.<br /><br />
+
+              이미 많은 아이들이 키즈 아카데미에서 수많은 꿈을 키우고 있습니다.<br />
+              다양한 경험들을 통해 아이의 한층 더 건강한 신체와 정서적인 발달을 키워주세요.<br />
+              저희 키즈 아카데미가 도와드리겠습니다.  
+              </p>
+            </div>
+          </div> 
+          <div class="col-md-6 col-sm-12 creative_img_wrap">
+            <img src="../assets/images/creative.png" alt="" class="growth">
           </div>
         </div>
       </div>
-    </div>
+    </div> 
     <footer>
         <div class="inner_container">
           <p>Copyright 2022 kindergarden Co.All rights reserved.</p>
