--- a/sub/creative.html
+++ b/sub/creative.html
@@ -4,14 +4,53 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/sub_common.css">
   <link rel="stylesheet" href="./assets/css/sub.css">
-  <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <script src="./assets/js/jquery-3.6.1.min.js"></script>
+  <script src="./assets/js/sub.js"></script>
   <title>인삿말</title>
 </head> 
 <body>
   <div class="wrap">
+    <header class="main_menu">
+      <div class="inner_container">
+        <div class="menu_bar">
+          <ul class="menu_gnb">
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./creative.html">인사말</a></li>
+            <li><a href="./center.html">시설안내</a></li>
+            <li><a href="./entrance.html">입학안내</a></li>
+            <li><a href="./guide.html">오시는길</a></li>
+          </ul>
+          <div class="tab_menu">
+            <div class="logo_img">
+              <p>어린이집 로고</p>
+            </div>
+            <div class="ghost">
+              <div class="ghost_bar">
+                <input type="checkbox" id="ghost_menu">
+                <label for="ghost_menu">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="ghost_list">
+          <ul>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./creative.html">인사말</a></li>
+            <li><a href="./center.html">시설안내</a></li>
+            <li><a href="./entrance.html">입학안내</a></li>
+            <li><a href="./guide.html">오시는길</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <div class="creative_main_banner">
       <div class="cre_main_text_box">
         <h1 class="s_main_tit cre_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
