--- a/sub/sub_ver2/center.html
+++ b/sub/sub_ver2/center.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/css/sub_common.css">
-  <link rel="stylesheet" href="./assets/css/sub.css">
+  <link rel="stylesheet" href="../assets/css/sub_common.css">
+  <link rel="stylesheet" href="../assets/css/sub.css">
   <script src="./assets/js/jquery-3.6.1.min.js"></script>
   <script src="./assets/js/sub.js"></script>
   <title>아카데미 센터</title>
@@ -21,7 +21,7 @@
             <li><a href="./index.html">HOME</a></li>
             <li><a href="./creative.html">인사말</a></li>
             <li><a href="./center.html">시설안내</a></li>
-            <li><a href="./entrance.html">입학안내</a></li>
+            <li><a href="./live.html">원생활</a></li>
             <li><a href="./guide.html">오시는길</a></li>
           </ul>
           <div class="tab_menu">
@@ -45,7 +45,7 @@
             <li><a href="./index.html">HOME</a></li>
             <li><a href="./creative.html">인사말</a></li>
             <li><a href="./center.html">시설안내</a></li>
-            <li><a href="./entrance.html">입학안내</a></li>
+            <li><a href="./live.html">원생활</a></li>
             <li><a href="./guide.html">오시는길</a></li>
           </ul>
         </div>
@@ -68,22 +68,22 @@
         </div>
         <div class="row">
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list mr-10">
-            <img src="./assets/images/academy1.png" alt="">
+            <img src="../assets/images/academy1.png" alt="">
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy2.png" alt="">
+            <img src="../assets/images/academy2.png" alt="">
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy3.png" alt="">
+            <img src="../assets/images/academy3.png" alt="">
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy4.png" alt="">
+            <img src="../assets/images/academy4.png" alt="">
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy5.png" alt="">
+            <img src="../assets/images/academy5.png" alt="">
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy6.png" alt="">
+            <img src="../assets/images/academy6.png" alt="">
           </div>
         </div>
       </div>
