--- a/sub/sub_ver2/guide.html
+++ b/sub/sub_ver2/guide.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/css/sub_common.css">
-  <link rel="stylesheet" href="./assets/css/sub.css">
+  <link rel="stylesheet" href="../assets/css/sub_common.css">
+  <link rel="stylesheet" href="../assets/css/sub.css">
   <script src="./assets/js/jquery-3.6.1.min.js"></script>
   <script src="./assets/js/sub.js"></script>
-  <title>아카데미 센터</title>
+  <title>오시는길</title>
 </head>
 <body>
   <div class="wrap">
@@ -21,7 +21,7 @@
             <li><a href="./index.html">HOME</a></li>
             <li><a href="./creative.html">인사말</a></li>
             <li><a href="./center.html">시설안내</a></li>
-            <li><a href="./entrance.html">입학안내</a></li>
+            <li><a href="./live.html">원생활</a></li>
             <li><a href="./guide.html">오시는길</a></li>
           </ul>
           <div class="tab_menu">
@@ -45,50 +45,29 @@
             <li><a href="./index.html">HOME</a></li>
             <li><a href="./creative.html">인사말</a></li>
             <li><a href="./center.html">시설안내</a></li>
-            <li><a href="./entrance.html">입학안내</a></li>
+            <li><a href="./live.html">원생활</a></li>
             <li><a href="./guide.html">오시는길</a></li>
           </ul>
         </div>
       </div>
     </header>
-    <div class="center_main_banner">
-      <div class="center_main_text_box">
-        <h1 class="s_main_tit center_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
-        <p class="main_sub_tit center_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+    <div class="guide_main_banner">
+        <div class="guide_main_text_box">
+          <h1 class="s_main_tit guide_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
+          <p class="main_sub_tit guide_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+        </div>
       </div>
-    </div>
-    <div class="center_btn"><p class="guide">시설안내</p></div>
-    <!-- 여기부터 부트스트랩 -->
-    <div class="center">
-      <div class="container-fluid inner_container">
+      <div class="guide_btn"><p class="guide_txt">오시는 길</p></div>
+      <div class="inner_container">
         <div class="academy_text_box">
-          <h1 class="sec_tit">아카데미 센터</h1>
-          <p class="desc academy_txt">키즈 아카데미의 교육환경을 갤러리에서 확인하세요<br />
-          사진을 클릭하시면 크게 보실 수 있습니다.</p>
-        </div>
-        <div class="row">
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list mr-10">
-            <img src="./assets/images/academy1.png" alt="">
-          </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy2.png" alt="">
-          </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy3.png" alt="">
-          </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy4.png" alt="">
-          </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy5.png" alt="">
-          </div>
-          <div class="col-xl-4 col-md-6 col-sm-12 academy_list">
-            <img src="./assets/images/academy6.png" alt="">
-          </div>
+          <h1 class="sec_tit">키즈 아카데미</h1>
+          <p class="desc academy_txt">키즈 아카데미로 오시는 길을<br />
+          안내해 드립니다.</p>
         </div>
       </div>
-    </div>
-    <footer>
+      <!-- 지도삽입 -->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.9881430973514!2d126.7361191!3d37.5081978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b7da654a8c503%3A0xe6694b92a0ac4223!2z7J247LKc6rSR7Jet7IucIOu2gO2Pieq1rCDssrTsnKHqtIDroZwgNDA!5e0!3m2!1sko!2skr!4v1669251531207!5m2!1sko!2skr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <footer>
         <div class="inner_container">
           <p>Copyright 2022 kindergarden Co.All rights reserved.</p>
         </div>
