--- a/sub/sub_ver2/index.html
+++ b/sub/sub_ver2/index.html
@@ -4,19 +4,82 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../assets/css/sub.css">
-  <link rel="stylesheet" href="../assets/css/sub_common.css">
   <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <title>메인페이지</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+  />
+  <link rel="stylesheet" href="../assets/css/sub_common.css">
+  <link rel="stylesheet" href="../assets/css/sub.css">
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+  <script src="./assets/js/jquery-3.6.1.min.js"></script>
+  <script src="./assets/js/sub.js"></script>
 </head>
 <body>            
   <div class="wrap">
-    <div class="main_banner">
-      <div class="main_text_box">
-        <h1 class="main_tit intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
-        <p class="main_sub_tit intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+    <header class="main_menu">
+      <div class="inner_container">
+        <div class="menu_bar">
+          <ul class="menu_gnb">
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./creative.html">인사말</a></li>
+            <li><a href="./center.html">시설안내</a></li>
+            <li><a href="./live.html">원생활</a></li>
+            <li><a href="./guide.html">오시는길</a></li>
+          </ul>
+          <div class="tab_menu">
+            <div class="logo_img">
+              <p>어린이집 로고</p>
+            </div>
+            <div class="ghost">
+              <div class="ghost_bar">
+                <input type="checkbox" id="ghost_menu">
+                <label for="ghost_menu">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="ghost_list">
+          <ul>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./creative.html">인사말</a></li>
+            <li><a href="./center.html">시설안내</a></li>
+            <li><a href="./live.html">원생활</a></li>
+            <li><a href="./guide.html">오시는길</a></li>
+          </ul>
+        </div>
       </div>
+    </header>
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="../assets/images/main.png" />
+          <div class="intro_text_box">
+            <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
+            <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="../assets/images/banner.png" />
+          <div class="intro_text_box">
+            <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
+            <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img src="../assets/images/main.png" />
+          <div class="intro_text_box">
+            <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
+            <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
     </div>
     <!-- 여기부터 부트스트랩 -->
   <div class="intro">
@@ -44,11 +107,27 @@
         </div>
       </div>
       </div>
-      <footer>
-        <div class="inner_container">
-          <p>Copyright 2022 kindergarden Co.All rights reserved.</p>
-        </div>
-      </footer>
   </div>
+
+
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        spaceBetween: 30,
+        effect: "fade",
+        autoplay: {
+          delay: 2500,
+          disableOnInteraction: false,
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+      });
+    </script>
+
 </body>
 </html>
