main page css 수정

--- a/onepage/index.html
+++ b/onepage/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./assets/css/common.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
   <script src="./assets/js/jquery-3.6.1.min.js"></script>
   <script src="./assets/js/kindergarden.js"></script>
 </head>
@@ -55,11 +56,30 @@
     </header>
 
     <section class="main_visual__section">
-      <div class="main_txt_position">
-        <div class="inner_container">
-          <h1 class="main_title" data-aos="fade-right" data-aos-duration="1000">사랑하는 아이를 기르는 일,<br />행복유치원이 함께 하겠습니다.</h1>
-          <p class="main_sub_title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">양질의 서비스와 최선의 출발점을 제공받을 수 있도록<br />행복유치원이 함께 하겠습니다.</p>
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <figure>
+              <picture>
+                <img src="./assets/images/slider_01.png" alt="slider_img1">
+              </picture>
+            </figure>
+          </div>
+          <div class="swiper-slide second-img">
+            <figure>
+              <picture>
+                <img src="./assets/images/slider_02.png" alt="slider_img2">
+              </picture>
+            </figure>
+          </div>
         </div>
+        <div class="main_txt_position">
+          <div class="inner_container">
+            <h1 class="main_title" data-aos="fade-right" data-aos-duration="1000">사랑하는 아이를 기르는 일,<br />행복유치원이 함께 하겠습니다.</h1>
+            <p class="main_sub_title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">양질의 서비스와 최선의 출발점을 제공받을 수 있도록<br />행복유치원이 함께 하겠습니다.</p>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
       </div>
     </section>
 
@@ -80,7 +100,7 @@
               </div>
               <div class="kindergarden__text__title">
                 <h2 class="sec_title">아이와 함께하는 행복한 시간, 행복유치원</h2>
-                <p class="sec_desc">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 <br />넓은 야외마당과 편안히 쉴 수 있는 실내 놀이터가 준비되어 있습니다.</p>
+                <p class="sec_desc">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보내실 수 있도록 <br />넓은 야외마당과 편안히 쉴 수 있는 실내 놀이터가 준비되어 있습니다.</p>
               </div>
             </div>
           </div>
@@ -100,7 +120,7 @@
                 </div>
               </figure>
             </div>
-            <div class="col-md-4 col-sm-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+            <div class="col-lg-4 col-sm-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
               <figure>
                 <picture>
                   <img src="./assets/images/enter02.png" alt="enterance_img2">
@@ -113,7 +133,7 @@
                 </div>
               </figure>
             </div>
-            <div class="col-md-4 col-sm-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+            <div class="col-lg-4 col-sm-12" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
               <figure>
                 <picture>
                   <img src="./assets/images/enter03.png" alt="enterance_img3">
@@ -157,7 +177,7 @@
             <div class="col-md-6 col-sm-12 sec-col">
               <div class="text-position">
                 <h2 class="sec_title">아이와 함께하는 행복한 시간, 행복유치원</h2>
-                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 <br />넓은 야외마당과 편안히 쉴 수 있는 실내 놀이터가 준비되어 있습니다.</p>
+                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보내실 수 있도록 <br />넓은 야외마당과 편안히 쉴 수 있는 실내 놀이터가 준비되어 있습니다.</p>
               </div>
             </div>
           </div>
@@ -186,19 +206,19 @@
             <div class="row">
               <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
-                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
+                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보내실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
-              <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+              <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
-                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
+                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보내실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
-              <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000">
+              <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
-                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
+                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보내실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
-              <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+              <div class="col-xl-3 col-md-6 col-sm-12 bg" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
                 <h2 class="sec_title">아이와 함께하는<br /> 행복한 시간</h2>
-                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록 넓은 야외마당과 편안히 쉴</p>
+                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보내실 수 있도록 넓은 야외마당과 편안히 쉴</p>
               </div>
             </div>
           </div>
@@ -222,7 +242,7 @@
         </div>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-4 col-sm-12">
+            <div class="col-lg-4 col-md-4 col-sm-12">
               <figure>
                 <picture>
                   <img src="./assets/images/life_img1.png" alt="life_img1">
@@ -235,7 +255,7 @@
                   우리 아이들의 놀이를 책임집니다!</p>
               </div>
             </div>
-            <div class="col-md-4 col-sm-12">
+            <div class="col-lg-4 col-md-4 col-sm-12">
               <figure>
                 <picture>
                   <img src="./assets/images/life_img2.png" alt="life_img2">
@@ -248,7 +268,7 @@
                   우리 아이들의 놀이를 책임집니다!</p>
               </div>
             </div>
-            <div class="col-md-4 col-sm-12">
+            <div class="col-lg-4 col-md-4 col-sm-12">
               <figure>
                 <picture>
                   <img src="./assets/images/life_img3.png" alt="life_img3">
@@ -285,18 +305,18 @@
             <div class="col-md-6 col-sm-12 ad_first_col">
               <div class="text-position">
                 <h2 class="sec_title">아이와 함께하는 행복한 시간, 행복유치원</h2>
-                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보낼 실 수 있도록<br />
+                <p class="sub_title">우리아이 맞춤형 보육의 첫걸음, 즐거운 시간을 보내실 수 있도록
                   넓은 야외마당과 편안히 쉴 수 있는 실내 놀이터가 준비되어 있습니다.</p>
               </div>
             </div>
             <div class="col-md-6 col-sm-12 ad_second_col">
-              <div id="daumRoughmapContainer1668666442340" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+              <div id="daumRoughmapContainer1668666442340" class="root_daum_roughmap root_daum_roughmap_landing" style="width:100%"></div>
               <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
               <script charset="UTF-8">
                 new daum.roughmap.Lander({
                   "timestamp" : "1668666442340",
                   "key" : "2cm22",
-                  "mapHeight" : "500"
+                  "mapHeight" : "400"
                 }).render();
               </script>
             </div>
@@ -316,7 +336,14 @@
   <script>
     AOS.init();
   </script>
-
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+  <script>
+      var swiper = new Swiper(".mySwiper", {
+        pagination: {
+          el: ".swiper-pagination",
+        },
+      });
+    </script>
 </body>
 
 </html>
