--- a/onepage/index.html
+++ b/onepage/index.html
@@ -8,12 +8,10 @@
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/common.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
-  <script src="./assets/js/jquery-3.6.1.min.js"></script>
-  <script src="./assets/js/kindergarden.js"></script>
 </head>
 <body>
   <div class="wrapper">
@@ -21,11 +19,11 @@
       <div class="inner_container">
         <div class="menu_bar">
           <ul class="menu_gnb">
-            <li><a href="javascript:(0)">입학안내</a></li>
-            <li><a href="javascript:(0)">시설안내</a></li>
-            <li><a href="javascript:(0)">특성화프로그램</a></li>
-            <li><a href="javascript:(0)">원생활</a></li>
-            <li><a href="javascript:(0)">오시는길</a></li>
+            <li><a href="#kindergarden__enterance">입학안내</a></li>
+            <li><a href="#kindergarden__facility">시설안내</a></li>
+            <li><a href="#kindergarden__program">특성화프로그램</a></li>
+            <li><a href="#kindergarden__life">원생활</a></li>
+            <li><a href="#kindergarden__address)">오시는길</a></li>
           </ul>
           <div class="tab_menu">
             <div class="logo_img">
@@ -45,11 +43,11 @@
         </div>
         <div class="ghost_list">
           <ul>
-            <li><a href="javascript:(0)">입학안내</a></li>
-            <li><a href="javascript:(0)">시설안내</a></li>
-            <li><a href="javascript:(0)">특성화프로그램</a></li>
-            <li><a href="javascript:(0)">원생활</a></li>
-            <li><a href="javascript:(0)">오시는길</a></li>
+            <li><a href="#kindergarden__enterance" class="mob">입학안내</a></li>
+            <li><a href="#kindergarden__facility" class="mob">시설안내</a></li>
+            <li><a href="#kindergarden__program" class="mob">특성화프로그램</a></li>
+            <li><a href="#kindergarden__life" class="mob">원생활</a></li>
+            <li><a href="#kindergarden__address" class="mob">오시는길</a></li>
           </ul>
         </div>
       </div>
@@ -83,7 +81,7 @@
       </div>
     </section>
 
-    <section class="kindergarden__enterance section_gap">
+    <section class="kindergarden__enterance section_gap" id="kindergarden__enterance">
       <div class="inner_container">
         <div class="container-fluid">
           <div class="row text-center">
@@ -151,7 +149,7 @@
       </div>
     </section>
 
-    <section class="kindergarden__facility section_gap">
+    <section class="kindergarden__facility section_gap" id="kindergarden__facility">
       <div class="inner_container">
         <div class="text_posiiton">
           <div class="build_img_box">
@@ -185,7 +183,7 @@
       </div>
     </section>
 
-    <section class="kindergarden__program section_gap">
+    <section class="kindergarden__program section_gap" id="kindergarden__program">
       <div class="inner_container">
         <div class="text_posiiton">
           <div class="build_img_box">
@@ -226,7 +224,7 @@
       </div>
     </section>
 
-    <section class="kindergarden__life section_gap">
+    <section class="kindergarden__life section_gap" id="kindergarden__life">
       <div class="inner_container">
         <div class="text_posiiton">
           <div class="build_img_box">
@@ -286,7 +284,7 @@
       </div>
     </section>
 
-    <section class="kindergarden__address section_gap">
+    <section class="kindergarden__address section_gap" id="kindergarden__address">
       <div class="inner_container">
         <div class="text_posiiton">
           <div class="build_img_box">
@@ -339,11 +337,20 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   <script>
       var swiper = new Swiper(".mySwiper", {
+        speed: 1500,
         pagination: {
           el: ".swiper-pagination",
+          clickable: true,
         },
+        // autoplay: {
+        //    delay: 3000,
+        //    disableOnInteraction: false,
+        //  },
+         
       });
     </script>
+      <script src="./assets/js/jquery-3.6.1.min.js"></script>
+  <script src="./assets/js/kindergarden.js"></script>
 </body>
 
 </html>
