--- a/sub/sub_ver2/index.html
+++ b/sub/sub_ver2/index.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="../assets/css/sub_common.css">
   <link rel="stylesheet" href="../assets/css/sub.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-  <script src="./assets/js/jquery-3.6.1.min.js"></script>
-  <script src="./assets/js/sub.js"></script>
+  <script src="../assets/js/jquery-3.6.1.min.js"></script>
+  <script src="../assets/js/sub.js"></script>
 </head>
 <body>            
   <div class="wrap">
