html링크 수정, 스크립트 수정

--- a/onepage/index.html
+++ b/onepage/index.html
@@ -23,7 +23,7 @@
             <li><a href="#kindergarden__facility">시설안내</a></li>
             <li><a href="#kindergarden__program">특성화프로그램</a></li>
             <li><a href="#kindergarden__life">원생활</a></li>
-            <li><a href="#kindergarden__address)">오시는길</a></li>
+            <li><a href="#kindergarden__address">오시는길</a></li>
           </ul>
           <div class="tab_menu">
             <div class="logo_img">
