--- a/onepage/index.html
+++ b/onepage/index.html
@@ -49,6 +49,32 @@
             <li><a href="#kindergarden__life" class="mob">원생활</a></li>
             <li><a href="#kindergarden__address" class="mob">오시는길</a></li>
           </ul>
+          <div class="ghost_info_wrap">
+            <div class="info_list_box">
+              <p class="info_list">
+                Tel
+              </p>
+              <P class="info_desc">
+                032-0000-0000
+              </P>
+            </div>
+            <div class="info_list_box">
+              <p class="info_list">
+                E-mail
+              </p>
+              <P class="info_desc">
+                dypic@gmail.com
+              </P>
+            </div>
+            <div class="info_list_box">
+              <p class="info_list">
+                Address
+              </p>
+              <P class="info_desc">
+                인천광역시 부평구 체육관로40, 대경프라자
+              </P>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -338,15 +364,15 @@
   <script>
       var swiper = new Swiper(".mySwiper", {
         speed: 1500,
+        effect: "fade",
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
         },
-        // autoplay: {
-        //    delay: 3000,
-        //    disableOnInteraction: false,
-        //  },
-         
+        autoplay: {
+           delay: 3000,
+           disableOnInteraction: false,
+         },
       });
     </script>
       <script src="./assets/js/jquery-3.6.1.min.js"></script>
