--- a/sub/index.html
+++ b/sub/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   />
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
   <link rel="stylesheet" href="./assets/css/sub_common.css">
   <link rel="stylesheet" href="./assets/css/sub.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
@@ -72,7 +73,7 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <img src="./assets/images/main.png" />
+          <img src="./assets/images/banner2.png" />
           <div class="intro_text_box">
             <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
             <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
@@ -85,7 +86,7 @@
   <div class="intro">
     <div class="container-fluid inner_container">
       <div class="row">
-        <div class="col-md-4 intro_text_wrap">
+        <div class="col-lg-4 col-md-12 intro_text_wrap">
           <div class="intro_wrap">
               <div class="intro_txt">
                 <div class="happy_btn">+ 행복 어린이집</div>
@@ -95,7 +96,7 @@
           </div>
         </div>
         
-        <div class="col-md-8 col-sm-12 intro_list">
+        <div class="col-lg-8 col-md-6 col-sm-12 intro_list">
           <div class="row guide1">
             <div class="col-md-6 list"><img src="./assets/images/list1.png" alt=""><p class="img_txt">인사말</p></div>
             <div class="col-md-6 list"><img src="./assets/images/list2.png" alt=""><p class="img_txt">시설안내</p></div>
@@ -107,12 +108,12 @@
         </div>
       </div>
       </div>
+    </div>
        <footer>
         <div class="inner_container">
           <p>Copyright 2022 kindergarden Co.All rights reserved.</p>
         </div>
       </footer>
-  </div>
 
 
     <script>
