--- a/sub/sub_ver2/index.html
+++ b/sub/sub_ver2/index.html
@@ -59,21 +59,21 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="../assets/images/main.png" />
+          <img src="./assets/images/main.png" />
           <div class="intro_text_box">
             <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
             <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
           </div>
         </div>
         <div class="swiper-slide">
-          <img src="../assets/images/banner.png" />
+          <img src="./assets/images/banner.png" />
           <div class="intro_text_box">
             <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
             <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
           </div>
         </div>
         <div class="swiper-slide">
-          <img src="../assets/images/main.png" />
+          <img src="./assets/images/banner2.png" />
           <div class="intro_text_box">
             <h1 class="intro_main_tit">어린이집, <br />행복유치원에서 시작하세요.</h1>
             <p class="intro_sub_tit">연령에 맞는 놀이와 학습 컨텐츠로<br />아이에게 무한한 가능성을 열어주세요!</p>
@@ -83,38 +83,38 @@
       <div class="swiper-pagination"></div>
     </div>
     <!-- 여기부터 부트스트랩 -->
-  <div class="intro">
-    <div class="container-fluid inner_container">
-      <div class="row">
-        <div class="col-md-4 intro_text_wrap">
-          <div class="intro_wrap">
-              <div class="intro_txt">
-                <div class="happy_btn">+ 행복 어린이집</div>
-                <h1 class="happy_green_txt">소중한 우리아이들,</h1>
-                <p class="happy_txt">안심하고 맡기실 수 있도록.</p>
-              </div>  
+    <div class="intro">
+      <div class="container-fluid inner_container">
+        <div class="row">
+          <div class="col-lg-4 col-md-12 intro_text_wrap">
+            <div class="intro_wrap">
+                <div class="intro_txt">
+                  <div class="happy_btn">+ 행복 어린이집</div>
+                  <h1 class="happy_green_txt">소중한 우리아이들,</h1>
+                  <p class="happy_txt">안심하고 맡기실 수 있도록.</p>
+                </div>  
+            </div>
+          </div>
+          
+          <div class="col-lg-8 col-md-6 col-sm-12 intro_list">
+            <div class="row guide1">
+              <div class="col-md-6 list"><img src="./assets/images/list1.png" alt=""><p class="img_txt">인사말</p></div>
+              <div class="col-md-6 list"><img src="./assets/images/list2.png" alt=""><p class="img_txt">시설안내</p></div>
+            </div>  
+          <div class="row guide2">
+            <div class="col-md-6 list"><img src="./assets/images/list3.png" alt=""><p class="img_txt">입학안내</p></div>
+              <div class="col-md-6 list"><img src="./assets/images/list4.png" alt=""><p class="img_txt">인사말</p></div>
+            </div>
           </div>
         </div>
-        
-        <div class="col-md-8 col-sm-12 intro_list">
-          <div class="row guide1">
-            <div class="col-md-6 list"><img src="../assets/images/list1.png" alt=""><p class="img_txt">인사말</p></div>
-            <div class="col-md-6 list"><img src="../assets/images/list2.png" alt=""><p class="img_txt">시설안내</p></div>
-          </div>  
-        <div class="row guide2">
-          <div class="col-md-6 list"><img src="../assets/images/list3.png" alt=""><p class="img_txt">입학안내</p></div>
-            <div class="col-md-6 list"><img src="../assets/images/list4.png" alt=""><p class="img_txt">인사말</p></div>
-          </div>
         </div>
-      </div>
-      </div>
-       <footer>
+    </div>
+      <footer>
         <div class="inner_container">
           <p>Copyright 2022 kindergarden Co.All rights reserved.</p>
         </div>
       </footer>
   </div>
-
 
     <script>
       var swiper = new Swiper(".mySwiper", {
